[package]
name = "rust-glyph-recog"
version = "0.1.0"
authors = ["david"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
trees = "0.4.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
